--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "styled-icons": "^10.46.0",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
