--- a/src/components-mock.json
+++ b/src/components-mock.json
@@ -54,8 +54,8 @@
 
   "cards_carrousel": [
     {
-      "title": "carrousel 1",
-      "content": "Card como componente. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel dictum mi, euismod congue mi. Nunc porttitor accumsan ante nec accumsan. Sed a tellus nec urna pellentesque lacinia nec nec ex. Phasellus pharetra ac quam mattis dignissim. Nam a feugiat dolor. Maecenas vulputate urna ac augue tempor, imperdiet sollicitudin nisi tincidunt. Donec in risus et felis tempus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel dictum mi, euismod congue mi. Nunc porttitor accumsan ante nec accumsan. Sed a tellus nec urna pellentesque lacinia nec nec ex. Phasellus pharetra ac quam mattis dignissim. Nam a feugiat dolor. Maecenas vulputate urna ac augue tempor, imperdiet sollicitudin nisi tincidunt. Donec in risus et felis tempus",
+      "title": "Genivaldo",
+      "content": "Natural de Limoeiro do norte, ",
       "image": {
         "url": "https://images.unsplash.com/photo-1517849845537-4d257902454a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80",
         "alt": "Imagem de Ondas"
